Bug 448433 - dodgeallwindows does not unhide on mouse hover in 0.10.7
Summary: dodgeallwindows does not unhide on mouse hover in 0.10.7
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-14 02:25 UTC by PQCraft
Modified: 2022-01-28 16:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.8
Sentry Crash Report:


Attachments
Latte layout file (5.75 KB, text/plain)
2022-01-15 20:15 UTC, PQCraft
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PQCraft 2022-01-14 02:25:20 UTC
SUMMARY
I have latte set up as a top bar due to its "Dodge all windows" feature (it would be nice if standard plasma had this so I wouldn't be wasting RAM running 2 things that basically do the same thing) and it will not show when I put the mouse at the top of the screen. It works perfectly fine on 0.10.6 but broke after updating to 0.10.7. I temporarily solved this by downgrading to 0.10.6 and holding the package.

STEPS TO REPRODUCE
1. Upgrade to 0.10.7
2. Have latte set up as a top bar
3. Set mode to "Dodge all windows"
4. Move mouse to top of the screen to access the bar

OBSERVED RESULT
Bar does not show

EXPECTED RESULT
Bar slides down

SOFTWARE/OS VERSIONS
Linux Kernel Version: 5.15.13
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
-
Comment 1 Michail Vourlakos 2022-01-14 06:13:00 UTC
it unhides just fine in my system, send your layout file to check it out please
Comment 2 Michail Vourlakos 2022-01-14 07:23:58 UTC
waiting layout
Comment 3 PQCraft 2022-01-15 20:13:30 UTC
1 sec while I find it...
Comment 4 PQCraft 2022-01-15 20:15:47 UTC
Created attachment 145511 [details]
Latte layout file

I used the 'Export For Backup' option
Comment 5 Michail Vourlakos 2022-01-16 00:31:44 UTC
Git commit ea88cb57a3bee1fca73df0732a2259c07f5e0dd5 by Michail Vourlakos.
Committed on 15/01/2022 at 23:43.
Pushed by mvourlakos into branch 'v0.10'.

position kwinedgehelper properly after startup
FIXED-IN:0.10.8

M  +5    -2    app/view/helpers/screenedgeghostwindow.cpp

https://invent.kde.org/plasma/latte-dock/commit/ea88cb57a3bee1fca73df0732a2259c07f5e0dd5
Comment 6 Michail Vourlakos 2022-01-16 00:32:46 UTC
Git commit ec62b36018d2b2ce01521900becc04ad93ce642c by Michail Vourlakos.
Committed on 16/01/2022 at 00:32.
Pushed by mvourlakos into branch 'master'.

position kwinedgehelper properly after startup
FIXED-IN:0.10.8

M  +5    -2    app/view/helpers/screenedgeghostwindow.cpp

https://invent.kde.org/plasma/latte-dock/commit/ec62b36018d2b2ce01521900becc04ad93ce642c
Comment 7 PQCraft 2022-01-16 02:05:31 UTC
Thanks 👍
Arch repos are still at 0.10.7 so I'll post an update once I upgrade
Comment 8 PQCraft 2022-01-28 16:30:02 UTC
Just updated to 0.10.8 and can confirm the update fixed it
Comment 9 PQCraft 2022-01-28 16:30:58 UTC
After Linux randomly kernel panicked so I logged in and thought it was a good time to apply updates.