position kwinedgehelper properly after startup

BUG:448433
FIXED-IN:0.10.8